[project]
name = "agentos-docker"
version = "1.0.0"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[os]",
  "cachetools",
  "charset-normalizer",
  "fastembed",
  "fastapi[standard]",
  "filelock",
  "gradio",
  "google-auth",
  "google-genai",
  "huggingface-hub",
  "loguru",
  "mmh3",
  "openai",
  "onnxruntime",
  "pillow",
  "pgvector",
  "psycopg[binary]",
  "pyasn1",
  "pyasn1-modules",
  "requests",
  "rsa",
  "sqlalchemy",
  "tenacity",
  "tokenizers",
  "mcp",
  "opentelemetry-api",
  "py-rust-stemmers",
  "opentelemetry-sdk",
  "openinference-instrumentation-agno",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "db*", "app*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*", "mcp.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
